@@ -1,14 +1,16 @@
 package finrem;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import uk.gov.hmcts.befta.dse.ccd.CcdEnvironment;
 import uk.gov.hmcts.befta.dse.ccd.DataLoaderToDefinitionStore;
 
 import java.util.List;
-import java.util.Arrays;
 
 public class HighLevelDataSetupApp extends DataLoaderToDefinitionStore {
+    private static final Logger logger = LoggerFactory.getLogger(HighLevelDataSetupApp.class);
     private static final String definitionsPath = "ccd_definition";
-    private static final List<CcdEnvironment> SKIPPED_ENVS = Arrays.asList(
+    private static final List<CcdEnvironment> SKIPPED_ENVS = List.of(
             CcdEnvironment.DEMO);
 
     public HighLevelDataSetupApp(CcdEnvironment dataSetupEnvironment) {
@@ -26,6 +28,7 @@ public class HighLevelDataSetupApp extends DataLoaderToDefinitionStore {
 
     @Override
     protected void doLoadTestData() {
+        logger.info("Definition path: {}", definitionsPath);
         List<String> definitionFileResources = getAllDefinitionFilesToLoadAt(definitionsPath);
         CcdEnvironment currentEnv = (CcdEnvironment) getDataSetupEnvironment();
         try {
